fix compiling tryin to build a stable version workflow